tests/NormalTests/paczka1/fuzzy1/91036794.err
Error in line 1: X7xTm0FcQL S592 4,x
Error in line 8: DNaKb S592 43,57
Error in line 13: RKApaHuD S592 59,9
Error in line 7: DNaKb S592 24,0
Error in line 31: n5iOi A75 52,1
Error in line 6: 0HMP A75 418,9
